<resources>
    <string name="app_name">DekuSanSdk</string>
    <string name="sign_message">Sign message</string>
    <string name="send_transaction">Send transaction</string>
    <string name="sign_personal_message">Sign personal message</string>
    <string name="sign_typed_message">Sign typed message</string>
    <string name="sign_msg_with_callback">Sign message with callback</string>
</resources>
