<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radioGroup_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioButton_dexon"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_dexon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="DEXON" />

        <RadioButton
            android:id="@+id/radioButton_ethereum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="ETHEREUM" />
    </RadioGroup>

    <Button
        android:id="@+id/send_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_transaction" />

    <Button
        android:id="@+id/sign_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_message" />

    <Button
        android:id="@+id/sign_personal_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_personal_message" />

    <Button
        android:id="@+id/sign_typed_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_typed_message" />

    <Button
        android:id="@+id/sign_msg_with_callback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_msg_with_callback" />
</LinearLayout>